# rl-evaluation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  style.yml  tag.yml  test.yml
RlEvaluation/: ResultData.py  config.py  hypers.py  interpolation.py  intervals.py  metrics.py  statistics.py  temporal.py  tools.py
RlEvaluation/_utils/: TerminalTable.py  data.py  numba.py  numpy.py
RlEvaluation/backend/: statistics.py  temporal.py
RlEvaluation/hypers/: api.py  reporting.py  simulation.py  utils.py
RlEvaluation/representations/: OnlineCollector.py
RlEvaluation/utils/: math.py  pandas.py
rlevaluation/: config.py  interpolation.py  intervals.py  metrics.py  statistics.py  temporal.py
rlevaluation/_utils/: data.py  dict.py  jit.py  logging.py  numba.py  numpy.py
rlevaluation/backend/: statistics.py  temporal.py
rlevaluation/hypers/: __init__.py  api.py  format.py  interface.py  reporting.py  simulation.py  utils.py
rlevaluation/utils/: math.py
scripts/: run_tests.sh
tests/: test_hypers.py  test_temporal.py
tests/_utils/: test_data.py
tests/hypers/: test_format.py  test_utils.py
tests/test_utils/: mock_data.py
typings/numba/: __init__.pyi
typings/numba/typed/: __init__.pyi
