[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.1"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B']
ignore = ['E501', 'E701']

[tool.pyright]
include = ['rlevaluation']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[project]
name = "rlevaluation"
version = "1.3.1"
description = ""
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "polars~=1.6",
    "numba~=0.57",
    "numpy~=2.0",
    "scipy~=1.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "commitizen>=4.2.1",
    "matplotlib>=3.10.0",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]
