[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B']
ignore = ['E501', 'E701']

[tool.pyright]
include = ['rlevaluation', 'tests']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[tool.setuptools]
packages = ["rlevaluation"]

[project]
name = "rlevaluation"
version = "1.1.0"
description = ""
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "polars~=1.6",
    "numba~=0.57",
    "numpy~=2.0",
    "scipy~=1.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/andnp/rlevaluation"
Documentation = "https://github.com/andnp/rlevaluation/blob/main/README.md"
Repository = "https://github.com/andnp/rlevaluation"
Issues = "https://github.com/andnp/rlevaluation/issues"
Changelog = "https://github.com/andnp/rlevaluation/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.2.1",
    "matplotlib>=3.10.0",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
